[package]
name = "cch23-alex-o"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "cch23-alex-o"

[dependencies]
axum = { version = "0.6.20"}
config = "0.13.3"
shuttle-axum = "0.34.0"
shuttle-runtime = "0.34.0"
tracing = "0.1.40"

[dev-dependencies]
hyper = "0.14.27"
reqwest = "0.11.22"
tokio = {version = "1.34.0", features=["macros", "rt-multi-thread"]}